# cubicrypt

./: CMakeLists.txt  PROTOCOL.md  README.md
.github/workflows/: ci.yml
include/: cubicrypt.h
include/cubicrypt/: config.h.in  external.h
src/: cubicrypt.c
src/crypto/: aes.h  cmox.c  cyclone-trng-test.h  cyclone.c  gcrypt.c  mbedtls.c  nettle.c  openssl.c  primitives.h  x25519-helper.h
test/: common.h  test-basics.c  test-gmac-padding.c  test-key-exchange.c  test-out-of-order.c  test-params.c  test-receiver-crash.c  test-sender-crash.c  test-session-exhaustion.c  test-storage-failure.c  test-unauthentic.c  test-vectors.c  test-vectors.h
tools/cyclone-ci/: .gitignore  Makefile
tools/cyclone-ci/config/: crypto_config.h  os_port_config.h
